ADD: <a> href links

--- a/src/app/modules/components/personal-info/personal-info.component.html
+++ b/src/app/modules/components/personal-info/personal-info.component.html
@@ -12,7 +12,7 @@
       </p>
     </div>
     <div class="links">
-      <a><fa-icon [icon]="faEnvelope"></fa-icon>lucramallo14&#64;gmail.com</a>
+      <a href="mailto:lucramallo14@gmail.com"><fa-icon [icon]="faEnvelope"></fa-icon>lucramallo14&#64;gmail.com</a>
       <a href="https://www.linkedin.com/in/lucas-ramallo-ab24a2218/"
         ><fa-icon [icon]="faLinkedin"></fa-icon>Lucas Ramallo</a
       >
