ADD: disclaimer (desktop only) in RDR2

--- a/src/app/modules/components/projects-mobile/projects-mobile.component.html
+++ b/src/app/modules/components/projects-mobile/projects-mobile.component.html
@@ -38,16 +38,16 @@
           <p>Typescript</p>
           <p>SCSS</p>
           <p>RxJs</p>
+          <p>Responsive</p>
           <p>Mobile</p>
           <p>Desktop</p>
-          <p>Responsive</p>
         </div>
       </div>
       <div class="grid-item">
         <h2 class="title"><a [href]="RDR2">Fanpage RDR 2</a></h2>
         <p class="description">
           I made this project to show my love for this game and also try some
-          animations.
+          animations. <strong>(desktop only)</strong>
         </p>
         <div class="tecs">
           <p>Angular</p>
