FIX: last commit

--- a/src/app/modules/components/projects-mobile/projects-mobile.component.html
+++ b/src/app/modules/components/projects-mobile/projects-mobile.component.html
@@ -47,7 +47,7 @@
         <h2 class="title"><a [href]="RDR2">Fanpage RDR 2</a></h2>
         <p class="description">
           I made this project to show my love for this game and also try some
-          animations. <strong>(desktop only)</strong>
+          animations. <strong>(desktop only, no mobile)</strong>
         </p>
         <div class="tecs">
           <p>Angular</p>
