ADD: svg icons for technologies && FIX: flashbang loading

--- a/src/app/modules/components/projects-mobile/projects-mobile.component.html
+++ b/src/app/modules/components/projects-mobile/projects-mobile.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar">
-  <a  (click)="scrollToSection('Projects')">Projects</a>
+  <a (click)="scrollToSection('Projects')">Projects</a>
 </nav>
 <div class="mobile">
   <div class="personal-info">
@@ -13,10 +13,17 @@
     </p>
     <ul class="links">
       <li>
-        <a [href]="gmail"> <fa-icon [icon]="faEnvelope"></fa-icon>Gmail</a>
+        <a [href]="gmail">
+          <fa-icon [icon]="faEnvelope"></fa-icon>
+          Gmail
+        </a>
       </li>
       <li>
-        <a [href]="linkedIn"> <fa-icon [icon]="faLinkedin"></fa-icon>LinkedIn</a>
+        <a [href]="linkedIn">
+          <fa-icon [icon]="faLinkedin"></fa-icon>
+
+          LinkedIn</a
+        >
       </li>
       <li>
         <a [href]="github"> <fa-icon [icon]="faGithub"></fa-icon>GitHub</a>
@@ -33,27 +40,66 @@
           coffee. It's not finished yet, but you can check the progress made
           anytime you want!
         </p>
-        <div class="tecs">
-          <p>Angular</p>
-          <p>Typescript</p>
-          <p>SCSS</p>
-          <p>RxJs</p>
-          <p>Responsive</p>
-          <p>Mobile</p>
-          <p>Desktop</p>
+        <div class="tecs-container">
+          <div class="tec">
+            <p>Angular</p>
+            <object data="assets/svgs/angular.svg"></object>
+          </div>
+          <div class="tec">
+            <p>Typescript</p>
+            <object data="assets/svgs/typescript.svg"></object>
+          </div>
+          <div class="tec">
+            <p>SCSS</p>
+            <object data="assets/svgs/sass.svg"></object>
+          </div>
+          <div class="tec">
+            <p>RxJs</p>
+            <object data="assets/svgs/rxjs.svg"></object>
+          </div>
+          <div class="tec">
+            <p>Responsive</p>
+            <div class="responsive">
+              <fa-icon [icon]="faDisplay"></fa-icon>
+              <fa-icon class="mobile" [icon]="faMobileScreen"></fa-icon>
+            </div>
+          </div>
+          <!-- <div class="tec">
+            <p>Mobile</p>
+            <fa-icon [icon]="faMobileScreen"></fa-icon>
+          </div>
+          <div class="tec">
+            <p>Desktop</p>
+            <fa-icon [icon]="faDisplay"></fa-icon>
+          </div> -->
         </div>
       </div>
       <div class="grid-item">
         <h2 class="title"><a [href]="RDR2">Fanpage RDR 2</a></h2>
         <p class="description">
           I made this project to show my love for this game and also try some
-          animations. <strong>(desktop only, no mobile)</strong>
+          animations. <strong>(recommend using desktop)</strong>
         </p>
-        <div class="tecs">
-          <p>Angular</p>
-          <p>Typescript</p>
-          <p>SCSS</p>
-          <p>Desktop</p>
+        <div class="tecs-container">
+            <div class="tec">
+              <p>Angular</p>
+              <object data="assets/svgs/angular.svg"></object>
+            </div>
+            <div class="tec">
+              <p>Typescript</p>
+              <object data="assets/svgs/typescript.svg"></object>
+            </div>
+            <div class="tec">
+              <p>SCSS</p>
+              <object data="assets/svgs/sass.svg"></object>
+            </div>
+            <div class="tec">
+              <p>Responsive</p>
+              <div class="responsive">
+                <fa-icon [icon]="faDisplay"></fa-icon>
+                <fa-icon class="mobile" [icon]="faMobileScreen"></fa-icon>
+              </div>
+            </div>
         </div>
       </div>
       <div class="grid-item">
