--- a/src/app/modules/components/projects/projects.component.html
+++ b/src/app/modules/components/projects/projects.component.html
@@ -19,14 +19,38 @@
               selling coffee. It's not finished yet, but you can check the
               progress made anytime you want!
             </p>
-            <div class="tecs">
-              <p>Angular</p>
-              <p>Typescript</p>
-              <p>SCSS</p>
-              <p>RxJs</p>
-              <p>Mobile</p>
-              <p>Desktop</p>
-              <p>Responsive</p>
+            <div class="tecs-container">
+              <div class="tec">
+                <p>Angular</p>
+                <object data="assets/svgs/angular.svg"></object>
+              </div>
+              <div class="tec">
+                <p>Typescript</p>
+                <object data="assets/svgs/typescript.svg"></object>
+              </div>
+              <div class="tec">
+                <p>SCSS</p>
+                <object data="assets/svgs/sass.svg"></object>
+              </div>
+              <div class="tec">
+                <p>RxJs</p>
+                <object data="assets/svgs/rxjs.svg"></object>
+              </div>
+              <div class="tec">
+                <p>Responsive</p>
+                <div class="responsive">
+                  <fa-icon [icon]="faDisplay"></fa-icon>
+                  <fa-icon class="mobile" [icon]="faMobileScreen"></fa-icon>
+                </div>
+              </div>
+              <!-- <div class="tec">
+                <p>Mobile</p>
+                <fa-icon [icon]="faMobileScreen"></fa-icon>
+              </div>
+              <div class="tec">
+                <p>Desktop</p>
+                <fa-icon [icon]="faDisplay"></fa-icon>
+              </div> -->
             </div>
           </div>
         </li>
@@ -45,11 +69,26 @@
               I made this project to show my love for this game and also try
               some animations.
             </p>
-            <div class="tecs">
-              <p>Angular</p>
-              <p>Typescript</p>
-              <p>SCSS</p>
-              <p>Desktop</p>
+            <div class="tecs-container">
+              <div class="tec">
+                <p>Angular</p>
+                <object data="assets/svgs/angular.svg"></object>
+              </div>
+              <div class="tec">
+                <p>Typescript</p>
+                <object data="assets/svgs/typescript.svg"></object>
+              </div>
+              <div class="tec">
+                <p>SCSS</p>
+                <object data="assets/svgs/sass.svg"></object>
+              </div>
+              <div class="tec">
+                <p>Responsive</p>
+                <div class="responsive">
+                  <fa-icon [icon]="faDisplay"></fa-icon>
+                  <fa-icon class="mobile" [icon]="faMobileScreen"></fa-icon>
+                </div>
+              </div>
             </div>
           </div>
         </li>
