--- a/src/app/modules/components/projects-mobile/projects-mobile.component.scss
+++ b/src/app/modules/components/projects-mobile/projects-mobile.component.scss
@@ -88,6 +88,7 @@
         font-size: 0.8rem;
 
         fa-icon {
+          padding: 0;
           padding: 0.35rem 0.35rem 0.35rem 0;
           font-size: 1.2rem;
         }
@@ -114,7 +115,7 @@
     gap: 5%;
     .grid-item {
       border: 1px solid #dbdbdb;
-      border-radius: 0.5rem;
+      border-radius: 0.75rem;
       padding: 1rem;
       display: flex;
       flex-wrap: wrap;
@@ -133,6 +134,7 @@
         width: 100%;
         margin: 0;
         background-color: inherit;
+
         a {
           text-decoration: none;
           color: inherit;
@@ -147,19 +149,57 @@
           "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
         color: #dbdbdb;
       }
-      .tecs {
+      .tecs-container {
         display: flex;
         flex-wrap: wrap;
         font-size: 0.75rem;
         color: #dbdbdb;
         align-items: center;
-        p {
-          margin: 0;
+        .tec{
+          display: flex;
+          align-items: center;
           border-radius: 0.25rem;
           border: 1px solid #dbdbdb;
-          padding: 0.5rem 0.5rem;
           margin: 0.25rem 0.5rem 0.25rem 0;
-          font-family: "ArchivoBlack";
+
+          p {
+            margin: 0;
+            padding: 0.5rem 0.5rem;
+            font-family: "ArchivoBlack";
+            order: 1;
+          }
+          object{
+            order: 0;
+            width: 1.25rem;
+            height: 1.25rem;
+            padding-left: .5rem;
+          }
+          fa-icon{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            order: 0;
+            font-size: 1.15rem;
+            width: 1.25rem;
+            height: 1.25rem;
+            padding-left: .5rem;
+          }
+          .responsive{
+            position: relative;
+
+            .mobile::ng-deep{
+              position: absolute;
+              bottom: -.15rem;
+              right: -.15rem;
+              display: flex;
+              justify-content: flex-end;
+              align-items: flex-end;
+              font-size: .75rem !important;
+                svg{
+                  border: 2px solid black !important;
+              }
+            }
+          }
         }
       }
     }
