--- a/src/app/modules/components/projects/projects.component.scss
+++ b/src/app/modules/components/projects/projects.component.scss
@@ -100,16 +100,57 @@
               margin: 0 0 10px 0;
               padding: 0;
             }
-            .tecs {
+            .tecs-container {
               display: flex;
               flex-wrap: wrap;
-              p {
-                margin-right: 8px;
-                font-size: 0.75rem;
-                font-family: "ArchivoBlack";
-                padding: 5px;
-                border-radius: 5px;
-                border: 1px solid #c6c6c6;
+              font-size: 0.75rem;
+              color: #dbdbdb;
+              align-items: center;
+              .tec{
+                display: flex;
+                align-items: center;
+                border-radius: 0.25rem;
+                border: 1px solid #dbdbdb;
+                margin: 0.25rem 0.5rem 0.25rem 0;
+      
+                p {
+                  margin: 0;
+                  padding: 0.5rem 0.5rem;
+                  font-family: "ArchivoBlack";
+                  order: 1;
+                }
+                object{
+                  order: 0;
+                  width: 1.25rem;
+                  height: 1.25rem;
+                  padding-left: .5rem;
+                }
+                fa-icon{
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                  order: 0;
+                  font-size: 1.15rem;
+                  width: 1.25rem;
+                  height: 1.25rem;
+                  padding-left: .5rem;
+                }
+                .responsive{
+                  position: relative;
+      
+                  .mobile::ng-deep{
+                    position: absolute;
+                    bottom: -.15rem;
+                    right: -.15rem;
+                    display: flex;
+                    justify-content: flex-end;
+                    align-items: flex-end;
+                    font-size: .75rem !important;
+                      svg{
+                        border: 2px solid black !important;
+                    }
+                  }
+                }
               }
             }
           }
