--- a/src/app/modules/components/projects/projects.component.scss
+++ b/src/app/modules/components/projects/projects.component.scss
@@ -148,6 +148,7 @@
                     font-size: .75rem !important;
                       svg{
                         border: 2px solid black !important;
+                        background-color: black !important;
                     }
                   }
                 }
