--- a/src/app/modules/components/projects-mobile/projects-mobile.component.html
+++ b/src/app/modules/components/projects-mobile/projects-mobile.component.html
@@ -34,7 +34,44 @@
     <h1 class="section-title">Projects</h1>
     <div class="grid">
       <div class="grid-item">
-        <h2 class="title"><a [href]="coffeeShop">Coffee Shop</a></h2>
+        <h2 class="title"><a [href]="foodApp">FOOD APP</a></h2>
+        <p class="description">
+          As I gym bro, I sure need an app for registering my meals and keep
+          track of my macros, so why wouldn't I write code to solve my need?
+          Also, I made a Backend for this project which uses FatSecret API.
+        </p>
+        <div class="tecs-container">
+          <div class="tec">
+            <p>Angular</p>
+            <object data="assets/svgs/angular.svg"></object>
+          </div>
+          <div class="tec">
+            <p>NodeJs</p>
+            <object data="assets/svgs/nodejs-alt.svg"></object>
+          </div>
+          <div class="tec">
+            <p>RxJs</p>
+            <object data="assets/svgs/rxjs.svg"></object>
+          </div>
+          <div class="tec">
+            <p>Typescript</p>
+            <object data="assets/svgs/typescript.svg"></object>
+          </div>
+          <div class="tec">
+            <p>SCSS</p>
+            <object data="assets/svgs/sass.svg"></object>
+          </div>
+          <div class="tec">
+            <p>Responsive</p>
+            <div class="responsive">
+              <fa-icon [icon]="faDisplay"></fa-icon>
+              <fa-icon class="mobile" [icon]="faMobileScreen"></fa-icon>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="grid-item">
+        <h2 class="title"><a [href]="coffeeShop">COFFEE SHOP</a></h2>
         <p class="description">
           This is a huge project that consists of an online store for selling
           coffee. It's not finished yet, but you can check the progress made
@@ -75,7 +112,7 @@
         </div>
       </div>
       <div class="grid-item">
-        <h2 class="title"><a [href]="RDR2">Fanpage RDR 2</a></h2>
+        <h2 class="title"><a [href]="RDR2">FANPAGE RDR 2</a></h2>
         <p class="description">
           I made this project to show my love for this game and also try some
           animations. <strong>(recommend using desktop)</strong>
@@ -103,7 +140,7 @@
         </div>
       </div>
       <div class="grid-item">
-        <h2 class="title"><a>Coming soon...</a></h2>
+        <h2 class="title"><a>COMING SOON...</a></h2>
         <p class="description">...</p>
       </div>
     </div>
