--- a/src/app/modules/components/projects-mobile/projects-mobile.component.scss
+++ b/src/app/modules/components/projects-mobile/projects-mobile.component.scss
@@ -31,7 +31,7 @@
   font-family: "ArchivoBlack";
   .intro {
     color: #dbdbdb;
-
+    padding-left: 5px;
     font-size: 0.9rem;
     margin: 0;
     font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
@@ -41,21 +41,41 @@
   .name {
     font-size: 4rem;
     margin: 2rem 0 1rem 0;
-    line-height: 0.9;
-    -webkit-text-stroke: 1px #dbdbdb;
-    background-color: inherit;
+    line-height: 1;
     animation: 1.5s move ease;
+    -webkit-text-stroke: 4px transparent;
+    background: linear-gradient(
+      to left,
+      #d16ba5,
+      #c777b9,
+      #ba83ca,
+      #aa8fd8,
+      #9a9ae1,
+      #8aa7ec,
+      #79b3f4,
+      #69bff8,
+      #52cffe,
+      #41dfff,
+      #46eefa,
+      #5ffbf1
+    );
+    background-clip: text;
+    -webkit-background-clip: text;
+    padding-left: 5px;
   }
   .description {
     font-family: "ArchivoBlack";
-    line-height: 0.85;
+    line-height: 0.875;
     font-size: 2.5rem;
     margin: 0 0 2rem 0;
     width: 100%;
     color: #dbdbdb;
     animation: 1.5s move ease-in-out;
+    padding-left: 5px;
   }
   .sub-description {
+    padding-left: 5px;
+
     font-size: 1rem;
     margin: 0;
     font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
@@ -67,6 +87,7 @@
     margin-top: 2.5rem;
     list-style: none;
     padding: 0;
+    padding-left: 5px;
     display: flex;
     grid-gap: 1rem;
     flex-wrap: wrap;
@@ -137,10 +158,29 @@
 
         a {
           text-decoration: none;
-          color: inherit;
-          font-size: 1.75rem;
+          font-size: 1.8rem;
           font-family: "ArchivoBlack";
-          -webkit-text-stroke: 1px #dbdbdb;
+          // -webkit-text-stroke: 1px transparent;
+          
+          // -webkit-text-stroke: 4px transparent;
+          color: transparent;
+          background: linear-gradient(
+            to left,
+            #d16ba5,
+            #c777b9,
+            #ba83ca,
+            #aa8fd8,
+            #9a9ae1,
+            #8aa7ec,
+            #79b3f4,
+            #69bff8,
+            #52cffe,
+            #41dfff,
+            #46eefa,
+            #5ffbf1
+          );
+          background-clip: text;
+          -webkit-background-clip: text;
         }
       }
       .description {
@@ -155,7 +195,7 @@
         font-size: 0.75rem;
         color: #dbdbdb;
         align-items: center;
-        .tec{
+        .tec {
           display: flex;
           align-items: center;
           border-radius: 0.25rem;
@@ -168,13 +208,13 @@
             font-family: "ArchivoBlack";
             order: 1;
           }
-          object{
+          object {
             order: 0;
             width: 1.25rem;
             height: 1.25rem;
-            padding-left: .5rem;
+            padding-left: 0.5rem;
           }
-          fa-icon{
+          fa-icon {
             display: flex;
             justify-content: center;
             align-items: center;
@@ -182,23 +222,23 @@
             font-size: 1.15rem;
             width: 1.25rem;
             height: 1.25rem;
-            padding-left: .5rem;
+            padding-left: 0.5rem;
           }
-          .responsive{
+          .responsive {
             position: relative;
 
-            .mobile::ng-deep{
+            .mobile::ng-deep {
               position: absolute;
-              bottom: -.15rem;
-              right: -.15rem;
+              bottom: -0.15rem;
+              right: -0.15rem;
               display: flex;
               justify-content: flex-end;
               align-items: flex-end;
-              font-size: .75rem !important;
-              svg{
+              font-size: 0.75rem !important;
+              svg {
                 border: 2px solid black !important;
                 background-color: black !important;
-            }
+              }
             }
           }
         }
