--- a/src/app/modules/components/projects/projects.component.html
+++ b/src/app/modules/components/projects/projects.component.html
@@ -1,8 +1,62 @@
 <section #main class="main">
-
   <div class="main-wrapper">
     <div class="projects-container">
       <ul class="projects">
+        <li #items class="item" (click)="handleClick($event.currentTarget)">
+          <div class="item-container">
+            <a><span class="coffe-shop">FOOD</span> APP</a>
+            <button (click)="destroy()">
+              Go back <fa-icon [icon]="faChevronRight"></fa-icon>
+            </button>
+            <button class="see-page" (click)="goToPage(foodApp)">
+              Go to page <fa-icon [icon]="faArrowUpRightDots"></fa-icon>
+            </button>
+          </div>
+          <div class="info-container">
+            <p class="description">
+              As I gym bro, I sure need an app for registering my meals and keep
+              track of my macros, so why wouldn't I write code to solve my need?
+              Also, I made a Backend for this project which uses FatSecret API.
+            </p>
+            <div class="tecs-container">
+              <div class="tec">
+                <p>Angular</p>
+                <object data="assets/svgs/angular.svg"></object>
+              </div>
+              <div class="tec">
+                <p>NodeJs</p>
+                <object data="assets/svgs/nodejs-alt.svg"></object>
+              </div>
+              <div class="tec">
+                <p>RxJs</p>
+                <object data="assets/svgs/rxjs.svg"></object>
+              </div>
+              <div class="tec">
+                <p>Typescript</p>
+                <object data="assets/svgs/typescript.svg"></object>
+              </div>
+              <div class="tec">
+                <p>SCSS</p>
+                <object data="assets/svgs/sass.svg"></object>
+              </div>
+              <div class="tec">
+                <p>Responsive</p>
+                <div class="responsive">
+                  <fa-icon [icon]="faDisplay"></fa-icon>
+                  <fa-icon class="mobile" [icon]="faMobileScreen"></fa-icon>
+                </div>
+              </div>
+              <!-- <div class="tec">
+                <p>Mobile</p>
+                <fa-icon [icon]="faMobileScreen"></fa-icon>
+              </div>
+              <div class="tec">
+                <p>Desktop</p>
+                <fa-icon [icon]="faDisplay"></fa-icon>
+              </div> -->
+            </div>
+          </div>
+        </li>
         <li #items class="item" (click)="handleClick($event.currentTarget)">
           <div class="item-container">
             <a><span class="coffe-shop">COFFEE</span> SHOP</a>
