--- a/src/app/modules/pages/home/home.component.html
+++ b/src/app/modules/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<app-projects #projects (destroyComponent)="createComponent()"></app-projects>
+<app-projects></app-projects>
 <app-projects-mobile></app-projects-mobile>
 <app-stars-background></app-stars-background>
 <app-personal-info></app-personal-info>
