FIX: low res views

--- a/src/app/modules/components/personal-info/personal-info.component.scss
+++ b/src/app/modules/components/personal-info/personal-info.component.scss
@@ -120,9 +120,12 @@
     }
     .description {
       font-size: 2rem !important;
+      width: 85%;
+
     }
     .sub-description {
       font-size: .9rem !important;
+      width: 85%;
     }
   }
   .links {
