--- a/src/app/modules/components/projects-mobile/projects-mobile.component.html
+++ b/src/app/modules/components/projects-mobile/projects-mobile.component.html
@@ -36,7 +36,7 @@
       <div class="grid-item">
         <h2 class="title"><a [href]="foodApp">FOOD APP</a></h2>
         <p class="description">
-          As I gym bro, I sure need an app for registering my meals and keep
+          As a gym bro, I sure need an app for registering my meals and keep
           track of my macros, so why wouldn't I write code to solve my need?
           Also, I made a Backend for this project which uses FatSecret API.
         </p>
